--- a/.bin/config.json
+++ b/.bin/config.json
@@ -1,5 +1,5 @@
 {
-  "sketch": "../GetStarted.ino",
+  "sketch": "../Alert.ino",
   "config": "deviceConnectionString",
   "provision_iot_hub": true,
   "provision_azure_function": false,
